// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasync Snapshot Tests Datasync App App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-datasync-main": {
    "Description": "(SO0320-datasync) Modern Data Architecture Accelerator. Version 1.1.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:agent:agent2:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "AgentArn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:agent:agent3:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "AgentArn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:agent:agent2:ip",
        },
        "Value": "1.1.1.2",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:agent:agent3:ip",
        },
        "Value": "1.1.1.3",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:location-object-storage:gcp1:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "LocationArn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:location-object-storage:gcp1:server-hostname",
        },
        "Value": "some-object-storage.endpoint.hostname",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:kms:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:kms:id",
        },
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:location-nfs:nfs-loc1:server-hostname",
        },
        "Value": "some.nfsserver.hostname",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:location-s3:s3location1:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "LocationArn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:location-s3:s3location2:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "LocationArn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:location-smb:smbloc1:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "LocationArn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:location-smb:smbloc1:server-hostname",
        },
        "Value": "some.smbserver.hostname",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:location-smb:smbloc2:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "LocationArn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:location-smb:smbloc2:server-hostname",
        },
        "Value": "some.smbserver.hostname",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:loggroup:name",
        },
        "Value": "/aws/datasync/task/test-org-test-env-test-domain-test-datasync-main",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:security-group:datasyncvpcesg:id",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "GroupId",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-datasync-main:vpc-endpoint:datasyncservice:id",
        },
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtodestinationlocationarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path/to/destination/location/arn",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtorolearnssmC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path/to/role-arn-ssm",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtosourcelocationarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path/to/source/location/arn",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtosubnetidssmC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path/to/subnet-id-ssm",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtovpcessmC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path/to/vpce-ssm",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-datasync-main/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-datasync) Modern Data Architecture Accelerator. Version 1.1.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "ActivationKey": "XXXXX-XXXXX-XXXXX-XXXXX-XXXXX",
          "AgentName": "test-org-test-env-test-domain-test-datasync-main-agent2",
          "SecurityGroupArns": [
            {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ec2:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":security-group/",
                  {
                    "Fn::GetAtt": [
                      "REPLACED-CFN-LOGICAL-ID",
                      "GroupId",
                    ],
                  },
                ],
              ],
            },
          ],
          "SubnetArns": [
            {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ec2:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":subnet/example-subnet",
                ],
              ],
            },
          ],
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "VpcEndpointId": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::DataSync::Agent",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/agent/agent2/arn",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "AgentArn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "ActivationKey": "XXXXX-YYYYY-XXXXX-YYYYY-XXXXX",
          "AgentName": "test-org-test-env-test-domain-test-datasync-main-agent3",
          "SecurityGroupArns": [
            {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ec2:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":security-group/sg-123456",
                ],
              ],
            },
          ],
          "SubnetArns": [
            {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ec2:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":subnet/",
                  {
                    "Ref": "SsmParameterValuepathtosubnetidssmC96584B6F00A464EAD1953AFF4B05118Parameter",
                  },
                ],
              ],
            },
          ],
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "VpcEndpointId": {
            "Ref": "SsmParameterValuepathtovpcessmC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
        },
        "Type": "AWS::DataSync::Agent",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/agent/agent3/arn",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "AgentArn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/agent/agent2/ip",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "1.1.1.2",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/agent/agent3/ip",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "1.1.1.3",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "PrivateDnsEnabled": false,
          "SecurityGroupIds": [
            {
              "Fn::GetAtt": [
                "REPLACED-CFN-LOGICAL-ID",
                "GroupId",
              ],
            },
          ],
          "ServiceName": {
            "Fn::Join": [
              "",
              [
                "com.amazonaws.",
                {
                  "Ref": "AWS::Region",
                },
                ".datasync",
              ],
            ],
          },
          "SubnetIds": [
            "subnet-0c27f330c0ea98xx5",
            "example-subnet",
          ],
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "VpcEndpointType": "Interface",
          "VpcId": "vpc-009ce5ec1cff75fx6",
        },
        "Type": "AWS::EC2::VPCEndpoint",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "AccessKey": {
            "Fn::Join": [
              "",
              [
                "{{resolve:secretsmanager:arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":secretsmanager:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":secret:some-secret-name:SecretString:accessKey::}}",
              ],
            ],
          },
          "AgentArns": [
            {
              "Fn::GetAtt": [
                "REPLACED-CFN-LOGICAL-ID",
                "AgentArn",
              ],
            },
          ],
          "BucketName": "some-object-storage-name",
          "SecretKey": {
            "Fn::Join": [
              "",
              [
                "{{resolve:secretsmanager:arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":secretsmanager:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":secret:some-secret-name:SecretString:secretKey::}}",
              ],
            ],
          },
          "ServerHostname": "some-object-storage.endpoint.hostname",
          "ServerPort": 443,
          "ServerProtocol": "HTTPS",
          "Subdirectory": "/some/prefix",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataSync::LocationObjectStorage",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/location-object-storage/gcp1/arn",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "LocationArn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/location-object-storage/gcp1/server-hostname",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "some-object-storage.endpoint.hostname",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "AliasName": "alias/test-org-test-env-test-domain-test-datasync-main",
          "TargetKeyId": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::KMS::Alias",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Properties": {
          "EnableKeyRotation": true,
          "Enabled": true,
          "KeyPolicy": {
            "Statement": [
              {
                "Action": "kms:*",
                "Effect": "Allow",
                "Principal": {
                  "AWS": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":iam::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":root",
                      ],
                    ],
                  },
                },
                "Resource": "*",
              },
              {
                "Action": [
                  "kms:Encrypt*",
                  "kms:Decrypt*",
                  "kms:ReEncrypt*",
                  "kms:GenerateDataKey*",
                  "kms:Describe*",
                ],
                "Condition": {
                  "ArnEquals": {
                    "kms:EncryptionContext:aws:logs:arn": {
                      "Fn::Join": [
                        "",
                        [
                          "arn:",
                          {
                            "Ref": "AWS::Partition",
                          },
                          ":logs:",
                          {
                            "Ref": "AWS::Region",
                          },
                          ":",
                          {
                            "Ref": "AWS::AccountId",
                          },
                          ":log-group:/aws/datasync/task/test-org-test-env-test-domain-test-datasync-main",
                        ],
                      ],
                    },
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "Service": {
                    "Fn::Join": [
                      "",
                      [
                        "logs.",
                        {
                          "Ref": "AWS::Region",
                        },
                        ".amazonaws.com",
                      ],
                    ],
                  },
                },
                "Resource": "*",
              },
            ],
            "Version": "2012-10-17",
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::KMS::Key",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/kms/arn",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/kms/id",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/location-nfs/nfs_loc1/server-hostname",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "some.nfsserver.hostname",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "CloudWatchLogGroupArn": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
          "DestinationLocationArn": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "LocationArn",
            ],
          },
          "Includes": [
            {
              "FilterType": "SIMPLE_PATTERN",
              "Value": "/data*|/ingestion*",
            },
          ],
          "Name": "test-org-test-env-test-domain-test-datasync-main-mytask1",
          "Options": {
            "LogLevel": "TRANSFER",
            "PreserveDeletedFiles": "PRESERVE",
            "TransferMode": "CHANGED",
          },
          "Schedule": {
            "ScheduleExpression": "cron(0 * * * ? *)",
          },
          "SourceLocationArn": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "LocationArn",
            ],
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataSync::Task",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "CloudWatchLogGroupArn": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
          "DestinationLocationArn": {
            "Ref": "SsmParameterValuepathtodestinationlocationarnC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "Excludes": [
            {
              "FilterType": "SIMPLE_PATTERN",
              "Value": "*.tmp|*.temp",
            },
          ],
          "Name": "test-org-test-env-test-domain-test-datasync-main-mytask2",
          "Options": {
            "LogLevel": "TRANSFER",
            "TransferMode": "CHANGED",
            "VerifyMode": "ONLY_FILES_TRANSFERRED",
          },
          "SourceLocationArn": {
            "Ref": "SsmParameterValuepathtosourcelocationarnC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataSync::Task",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "OnPremConfig": {
            "AgentArns": [
              {
                "Fn::GetAtt": [
                  "REPLACED-CFN-LOGICAL-ID",
                  "AgentArn",
                ],
              },
              {
                "Fn::GetAtt": [
                  "REPLACED-CFN-LOGICAL-ID",
                  "AgentArn",
                ],
              },
            ],
          },
          "ServerHostname": "some.nfsserver.hostname",
          "Subdirectory": "/some/subdirectory",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataSync::LocationNFS",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "S3BucketArn": "example-bucket-name1",
          "S3Config": {
            "BucketAccessRoleArn": {
              "Ref": "SsmParameterValuepathtorolearnssmC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
          },
          "Subdirectory": "/some/prefix",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataSync::LocationS3",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/location-s3/s3location1/arn",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "LocationArn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "S3BucketArn": "example-bucket-name2",
          "S3Config": {
            "BucketAccessRoleArn": "some-role-arn",
          },
          "Subdirectory": "/some/prefix",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataSync::LocationS3",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/location-s3/s3location2/arn",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "LocationArn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "AgentArns": [
            {
              "Fn::GetAtt": [
                "REPLACED-CFN-LOGICAL-ID",
                "AgentArn",
              ],
            },
          ],
          "Domain": "some-ad-domain-name",
          "MountOptions": {
            "Version": "AUTOMATIC",
          },
          "Password": {
            "Fn::Join": [
              "",
              [
                "{{resolve:secretsmanager:arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":secretsmanager:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":secret:some-secret-name:SecretString:password::}}",
              ],
            ],
          },
          "ServerHostname": "some.smbserver.hostname",
          "Subdirectory": "/some/subdirectory",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "User": {
            "Fn::Join": [
              "",
              [
                "{{resolve:secretsmanager:arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":secretsmanager:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":secret:some-secret-name:SecretString:user::}}",
              ],
            ],
          },
        },
        "Type": "AWS::DataSync::LocationSMB",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/location-smb/smb-loc1/arn",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "LocationArn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/location-smb/smb-loc1/server-hostname",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "some.smbserver.hostname",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "AgentArns": [
            {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":datasync:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":agent/existing-agent-id",
                ],
              ],
            },
          ],
          "Domain": "some-ad-domain-name",
          "Password": {
            "Fn::Join": [
              "",
              [
                "{{resolve:secretsmanager:arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":secretsmanager:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":secret:some-secret-name:SecretString:password::}}",
              ],
            ],
          },
          "ServerHostname": "some.smbserver.hostname",
          "Subdirectory": "/some/subdirectory",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "User": {
            "Fn::Join": [
              "",
              [
                "{{resolve:secretsmanager:arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":secretsmanager:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":secret:some-secret-name:SecretString:user::}}",
              ],
            ],
          },
        },
        "Type": "AWS::DataSync::LocationSMB",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/location-smb/smb-loc2/arn",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "LocationArn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/location-smb/smb-loc2/server-hostname",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "some.smbserver.hostname",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "NIST.800.53.R5-CloudWatchLogGroupRetentionPeriod",
                "reason": "[MDAA:@aws-mdaa/cloudwatch-constructs/lib/loggroup.ts:LINE:COL] LogGroup retention is set to RetentionDays.INFINITE.",
              },
              {
                "id": "HIPAA.Security-CloudWatchLogGroupRetentionPeriod",
                "reason": "[MDAA:@aws-mdaa/cloudwatch-constructs/lib/loggroup.ts:LINE:COL] LogGroup retention is set to RetentionDays.INFINITE.",
              },
              {
                "id": "PCI.DSS.321-CloudWatchLogGroupRetentionPeriod",
                "reason": "[MDAA:@aws-mdaa/cloudwatch-constructs/lib/loggroup.ts:LINE:COL] LogGroup retention is set to RetentionDays.INFINITE.",
              },
            ],
          },
        },
        "Properties": {
          "KmsKeyId": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
          "LogGroupName": "/aws/datasync/task/test-org-test-env-test-domain-test-datasync-main",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::Logs::LogGroup",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "PolicyDocument": {
            "Fn::Join": [
              "",
              [
                "{"Statement":[{"Action":["logs:CreateLogStream","logs:PutLogEvents"],"Effect":"Allow","Principal":{"Service":"datasync.amazonaws.com"},"Resource":"",
                {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
                ""}],"Version":"2012-10-17"}",
              ],
            ],
          },
          "PolicyName": "REPLACED-CFN-LOGICAL-ID",
        },
        "Type": "AWS::Logs::ResourcePolicy",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/loggroup/name",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "/aws/datasync/task/test-org-test-env-test-domain-test-datasync-main",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "GroupDescription": "test-org-test-env-test-domain-test-datasync-main/datasync/vpce-datasync-sg",
          "GroupName": "test-org-test-env-test-domain-test-datasync-main-datasync-vpce-sg",
          "SecurityGroupEgress": [
            {
              "CidrIp": "255.255.255.255/32",
              "Description": "Disallow all traffic",
              "FromPort": 252,
              "IpProtocol": "icmp",
              "ToPort": 86,
            },
          ],
          "SecurityGroupIngress": [
            {
              "CidrIp": "1.1.1.1/32",
              "Description": "Allow DataSync data transfer HTTPS traffic from agents",
              "FromPort": 443,
              "IpProtocol": "tcp",
              "ToPort": 443,
            },
            {
              "CidrIp": "1.1.1.1/32",
              "Description": "Allow DataSync control traffic from agents",
              "FromPort": 1024,
              "IpProtocol": "tcp",
              "ToPort": 1064,
            },
            {
              "CidrIp": "1.1.1.2/32",
              "Description": "Allow DataSync data transfer HTTPS traffic from agents",
              "FromPort": 443,
              "IpProtocol": "tcp",
              "ToPort": 443,
            },
            {
              "CidrIp": "1.1.1.2/32",
              "Description": "Allow DataSync control traffic from agents",
              "FromPort": 1024,
              "IpProtocol": "tcp",
              "ToPort": 1064,
            },
            {
              "CidrIp": "1.1.1.3/32",
              "Description": "Allow DataSync data transfer HTTPS traffic from agents",
              "FromPort": 443,
              "IpProtocol": "tcp",
              "ToPort": 443,
            },
            {
              "CidrIp": "1.1.1.3/32",
              "Description": "Allow DataSync control traffic from agents",
              "FromPort": 1024,
              "IpProtocol": "tcp",
              "ToPort": 1064,
            },
            {
              "CidrIp": "10.0.0.0/8",
              "Description": "from 10.0.0.0/8:443",
              "FromPort": 443,
              "IpProtocol": "tcp",
              "ToPort": 443,
            },
          ],
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "datasync",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-datasync-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "VpcId": "vpc-009ce5ec1cff75fx6",
        },
        "Type": "AWS::EC2::SecurityGroup",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/security-group/datasync-vpce-sg/id",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "GroupId",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-datasync-main/vpc-endpoint/datasync-service/id",
          "Tags": {
            "mdaa_cdk_app": "datasync",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-datasync-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`datasync Snapshot Tests Datasync Stack Snapshot Test 1`] = `
{
  "Description": "(SO0320-datasync) Modern Data Architecture Accelerator. Version 1.1.0",
  "Outputs": {
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:agent:agent2:arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "AgentArn",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:agent:agent3:arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "AgentArn",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:agent:agent2:ip",
      },
      "Value": "1.1.1.2",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:agent:agent3:ip",
      },
      "Value": "1.1.1.3",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:location-object-storage:gcp1:arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "LocationArn",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:location-object-storage:gcp1:server-hostname",
      },
      "Value": "some-object-storage.endpoint.hostname",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:kms:arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "Arn",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:kms:id",
      },
      "Value": {
        "Ref": "REPLACED-CFN-LOGICAL-ID",
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:location-nfs:nfs-loc1:server-hostname",
      },
      "Value": "some.nfsserver.hostname",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:location-s3:s3location1:arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "LocationArn",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:location-s3:s3location2:arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "LocationArn",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:location-smb:smbloc1:arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "LocationArn",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:location-smb:smbloc1:server-hostname",
      },
      "Value": "some.smbserver.hostname",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:location-smb:smbloc2:arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "LocationArn",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:location-smb:smbloc2:server-hostname",
      },
      "Value": "some.smbserver.hostname",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:loggroup:name",
      },
      "Value": "/aws/datasync/task/test-org-test-env-test-domain-test-datasync-main",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:security-group:datasyncvpcesg:id",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "GroupId",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-datasync-main:vpc-endpoint:datasyncservice:id",
      },
      "Value": {
        "Ref": "REPLACED-CFN-LOGICAL-ID",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuepathtodestinationlocationarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/path/to/destination/location/arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuepathtorolearnssmC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/path/to/role-arn-ssm",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuepathtosourcelocationarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/path/to/source/location/arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuepathtosubnetidssmC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/path/to/subnet-id-ssm",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuepathtovpcessmC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/path/to/vpce-ssm",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Description": "Stack description parameter to update on version changes",
        "Name": "/test-org/test-domain/test-datasync-main/aws-solution",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "(SO0320-datasync) Modern Data Architecture Accelerator. Version 1.1.0",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "ActivationKey": "XXXXX-XXXXX-XXXXX-XXXXX-XXXXX",
        "AgentName": "test-org-test-env-test-domain-test-datasync-main-agent2",
        "SecurityGroupArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":ec2:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":security-group/",
                {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "GroupId",
                  ],
                },
              ],
            ],
          },
        ],
        "SubnetArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":ec2:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":subnet/example-subnet",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
        "VpcEndpointId": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "Type": "AWS::DataSync::Agent",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/agent/agent2/arn",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "AgentArn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "ActivationKey": "XXXXX-YYYYY-XXXXX-YYYYY-XXXXX",
        "AgentName": "test-org-test-env-test-domain-test-datasync-main-agent3",
        "SecurityGroupArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":ec2:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":security-group/sg-123456",
              ],
            ],
          },
        ],
        "SubnetArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":ec2:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":subnet/",
                {
                  "Ref": "SsmParameterValuepathtosubnetidssmC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
        "VpcEndpointId": {
          "Ref": "SsmParameterValuepathtovpcessmC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
      },
      "Type": "AWS::DataSync::Agent",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/agent/agent3/arn",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "AgentArn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/agent/agent2/ip",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "1.1.1.2",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/agent/agent3/ip",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "1.1.1.3",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "PrivateDnsEnabled": false,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "GroupId",
            ],
          },
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region",
              },
              ".datasync",
            ],
          ],
        },
        "SubnetIds": [
          "subnet-0c27f330c0ea98xx5",
          "example-subnet",
        ],
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
        "VpcEndpointType": "Interface",
        "VpcId": "vpc-009ce5ec1cff75fx6",
      },
      "Type": "AWS::EC2::VPCEndpoint",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "AccessKey": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":secretsmanager:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":secret:some-secret-name:SecretString:accessKey::}}",
            ],
          ],
        },
        "AgentArns": [
          {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "AgentArn",
            ],
          },
        ],
        "BucketName": "some-object-storage-name",
        "SecretKey": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":secretsmanager:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":secret:some-secret-name:SecretString:secretKey::}}",
            ],
          ],
        },
        "ServerHostname": "some-object-storage.endpoint.hostname",
        "ServerPort": 443,
        "ServerProtocol": "HTTPS",
        "Subdirectory": "/some/prefix",
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
      },
      "Type": "AWS::DataSync::LocationObjectStorage",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/location-object-storage/gcp1/arn",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "LocationArn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/location-object-storage/gcp1/server-hostname",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "some-object-storage.endpoint.hostname",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "AliasName": "alias/test-org-test-env-test-domain-test-datasync-main",
        "TargetKeyId": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "EnableKeyRotation": true,
        "Enabled": true,
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Encrypt*",
                "kms:Decrypt*",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
                "kms:Describe*",
              ],
              "Condition": {
                "ArnEquals": {
                  "kms:EncryptionContext:aws:logs:arn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/datasync/task/test-org-test-env-test-domain-test-datasync-main",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": {
                  "Fn::Join": [
                    "",
                    [
                      "logs.",
                      {
                        "Ref": "AWS::Region",
                      },
                      ".amazonaws.com",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/kms/arn",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/kms/id",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/location-nfs/nfs_loc1/server-hostname",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "some.nfsserver.hostname",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "CloudWatchLogGroupArn": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
        "DestinationLocationArn": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "LocationArn",
          ],
        },
        "Includes": [
          {
            "FilterType": "SIMPLE_PATTERN",
            "Value": "/data*|/ingestion*",
          },
        ],
        "Name": "test-org-test-env-test-domain-test-datasync-main-mytask1",
        "Options": {
          "LogLevel": "TRANSFER",
          "PreserveDeletedFiles": "PRESERVE",
          "TransferMode": "CHANGED",
        },
        "Schedule": {
          "ScheduleExpression": "cron(0 * * * ? *)",
        },
        "SourceLocationArn": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "LocationArn",
          ],
        },
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
      },
      "Type": "AWS::DataSync::Task",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "CloudWatchLogGroupArn": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
        "DestinationLocationArn": {
          "Ref": "SsmParameterValuepathtodestinationlocationarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "Excludes": [
          {
            "FilterType": "SIMPLE_PATTERN",
            "Value": "*.tmp|*.temp",
          },
        ],
        "Name": "test-org-test-env-test-domain-test-datasync-main-mytask2",
        "Options": {
          "LogLevel": "TRANSFER",
          "TransferMode": "CHANGED",
          "VerifyMode": "ONLY_FILES_TRANSFERRED",
        },
        "SourceLocationArn": {
          "Ref": "SsmParameterValuepathtosourcelocationarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
      },
      "Type": "AWS::DataSync::Task",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "OnPremConfig": {
          "AgentArns": [
            {
              "Fn::GetAtt": [
                "REPLACED-CFN-LOGICAL-ID",
                "AgentArn",
              ],
            },
            {
              "Fn::GetAtt": [
                "REPLACED-CFN-LOGICAL-ID",
                "AgentArn",
              ],
            },
          ],
        },
        "ServerHostname": "some.nfsserver.hostname",
        "Subdirectory": "/some/subdirectory",
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
      },
      "Type": "AWS::DataSync::LocationNFS",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "S3BucketArn": "example-bucket-name1",
        "S3Config": {
          "BucketAccessRoleArn": {
            "Ref": "SsmParameterValuepathtorolearnssmC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
        },
        "Subdirectory": "/some/prefix",
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
      },
      "Type": "AWS::DataSync::LocationS3",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/location-s3/s3location1/arn",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "LocationArn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "S3BucketArn": "example-bucket-name2",
        "S3Config": {
          "BucketAccessRoleArn": "some-role-arn",
        },
        "Subdirectory": "/some/prefix",
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
      },
      "Type": "AWS::DataSync::LocationS3",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/location-s3/s3location2/arn",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "LocationArn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "AgentArns": [
          {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "AgentArn",
            ],
          },
        ],
        "Domain": "some-ad-domain-name",
        "MountOptions": {
          "Version": "AUTOMATIC",
        },
        "Password": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":secretsmanager:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":secret:some-secret-name:SecretString:password::}}",
            ],
          ],
        },
        "ServerHostname": "some.smbserver.hostname",
        "Subdirectory": "/some/subdirectory",
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
        "User": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":secretsmanager:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":secret:some-secret-name:SecretString:user::}}",
            ],
          ],
        },
      },
      "Type": "AWS::DataSync::LocationSMB",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/location-smb/smb-loc1/arn",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "LocationArn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/location-smb/smb-loc1/server-hostname",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "some.smbserver.hostname",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "AgentArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":datasync:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":agent/existing-agent-id",
              ],
            ],
          },
        ],
        "Domain": "some-ad-domain-name",
        "Password": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":secretsmanager:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":secret:some-secret-name:SecretString:password::}}",
            ],
          ],
        },
        "ServerHostname": "some.smbserver.hostname",
        "Subdirectory": "/some/subdirectory",
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
        "User": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":secretsmanager:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":secret:some-secret-name:SecretString:user::}}",
            ],
          ],
        },
      },
      "Type": "AWS::DataSync::LocationSMB",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/location-smb/smb-loc2/arn",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "LocationArn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/location-smb/smb-loc2/server-hostname",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "some.smbserver.hostname",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "DeletionPolicy": "Retain",
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "NIST.800.53.R5-CloudWatchLogGroupRetentionPeriod",
              "reason": "[MDAA:@aws-mdaa/cloudwatch-constructs/lib/loggroup.ts:LINE:COL] LogGroup retention is set to RetentionDays.INFINITE.",
            },
            {
              "id": "HIPAA.Security-CloudWatchLogGroupRetentionPeriod",
              "reason": "[MDAA:@aws-mdaa/cloudwatch-constructs/lib/loggroup.ts:LINE:COL] LogGroup retention is set to RetentionDays.INFINITE.",
            },
            {
              "id": "PCI.DSS.321-CloudWatchLogGroupRetentionPeriod",
              "reason": "[MDAA:@aws-mdaa/cloudwatch-constructs/lib/loggroup.ts:LINE:COL] LogGroup retention is set to RetentionDays.INFINITE.",
            },
          ],
        },
      },
      "Properties": {
        "KmsKeyId": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
        "LogGroupName": "/aws/datasync/task/test-org-test-env-test-domain-test-datasync-main",
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "PolicyDocument": {
          "Fn::Join": [
            "",
            [
              "{"Statement":[{"Action":["logs:CreateLogStream","logs:PutLogEvents"],"Effect":"Allow","Principal":{"Service":"datasync.amazonaws.com"},"Resource":"",
              {
                "Fn::GetAtt": [
                  "REPLACED-CFN-LOGICAL-ID",
                  "Arn",
                ],
              },
              ""}],"Version":"2012-10-17"}",
            ],
          ],
        },
        "PolicyName": "REPLACED-CFN-LOGICAL-ID",
      },
      "Type": "AWS::Logs::ResourcePolicy",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/loggroup/name",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "/aws/datasync/task/test-org-test-env-test-domain-test-datasync-main",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "GroupDescription": "test-org-test-env-test-domain-test-datasync-main/datasync/vpce-datasync-sg",
        "GroupName": "test-org-test-env-test-domain-test-datasync-main-datasync-vpce-sg",
        "SecurityGroupEgress": [
          {
            "CidrIp": "255.255.255.255/32",
            "Description": "Disallow all traffic",
            "FromPort": 252,
            "IpProtocol": "icmp",
            "ToPort": 86,
          },
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "1.1.1.1/32",
            "Description": "Allow DataSync data transfer HTTPS traffic from agents",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
          {
            "CidrIp": "1.1.1.1/32",
            "Description": "Allow DataSync control traffic from agents",
            "FromPort": 1024,
            "IpProtocol": "tcp",
            "ToPort": 1064,
          },
          {
            "CidrIp": "1.1.1.2/32",
            "Description": "Allow DataSync data transfer HTTPS traffic from agents",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
          {
            "CidrIp": "1.1.1.2/32",
            "Description": "Allow DataSync control traffic from agents",
            "FromPort": 1024,
            "IpProtocol": "tcp",
            "ToPort": 1064,
          },
          {
            "CidrIp": "1.1.1.3/32",
            "Description": "Allow DataSync data transfer HTTPS traffic from agents",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
          {
            "CidrIp": "1.1.1.3/32",
            "Description": "Allow DataSync control traffic from agents",
            "FromPort": 1024,
            "IpProtocol": "tcp",
            "ToPort": 1064,
          },
          {
            "CidrIp": "10.0.0.0/8",
            "Description": "from 10.0.0.0/8:443",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "datasync",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-datasync-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
        "VpcId": "vpc-009ce5ec1cff75fx6",
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/security-group/datasync-vpce-sg/id",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "GroupId",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-datasync-main/vpc-endpoint/datasync-service/id",
        "Tags": {
          "mdaa_cdk_app": "datasync",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-datasync-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
